--- a/style.css
+++ b/style.css
@@ -9,8 +9,12 @@ body{
 header{
     position: fixed;
     background-color: white;
-    height: 130px;
-    width: 100%;
+    height: 120px;
+    width: 100%;  
+    z-index: 1;
+}
+
+#contenidoHeader{
     display: flex;
     justify-content: center;
     align-content: center;
@@ -20,19 +24,155 @@ header{
     float: left;
     height :120px;
     width: auto;
-    padding-right: 15px;
+    padding-right: 10px;
 }
 
-#titulo{
+#lineaVerticalPrincipal {
+    margin-top: 10px;
+    float: left;
+    border-left: 2px solid black;
+    height: 100px;
+    opacity: 0.5;
+}
+
+#tituloPrincipal{
     position: relative;
     float: left;
     font-family: 'Bafora';
     font-size: 50px;
-    
+    padding-right: 25px;
+    padding-left: 20px;
 }
 
-@media (max-width: 800px){
+main{
+    display: flex;
+    justify-content: center;
+    z-index: 0;
+}
 
+section{
+    position: relative;
+    right:164px;
+    top: 50px;
+    height: 800px;
+    width: 750px;
+    border: 1 solid black;
+    display: flex;
+    align-items: center;
+    margin-top: 0px;
+}
+
+section img{
+    height: 600px;
+    width : auto;
+    float:left;
+    border: 1px solid rgba(0, 0, 0, 0.089);
+}
+
+.lineaVerticalSecciones{
+    float: left;
+    border-left: 2px solid black;
+    height: 450px;
+    opacity: 0.5;
+    margin-left: 30px;
+    margin-right: 30px;
+}
+
+aside{
+    float: left;
+    width: 30%;
+}
+
+aside h1{
+    font-family: 'Bafora';
+    font-size: 55px;
+    margin-bottom: 0px;
+}
+
+aside p{
+    font-family: 'Mukta';
+    font-size: 20px;
+}
+
+@media (max-width: 1200px){
+
+    section {
+        right:93px;
+        top:10px;
+    }
+
+    section img{
+        height: 500px;
+        width: auto;
+    }
+
+    .lineaVerticalSecciones{
+        height: 350px;
+    }
+}
+
+@media (max-width: 1000px){
+
+    section {
+        right:22px;
+        top : 0px;
+        height: 700px;
+    }
+
+    section img{
+        height: 400px;
+        width: auto;
+    }
+
+    .lineaVerticalSecciones{
+        height: 250px;
+    }
+}
+
+@media (max-width: 830px){
+
+    section {
+        left:49px;
+        height: 600px;
+    }
+
+    section img{
+        height: 300px;
+        width: auto;
+    }
+
+    .lineaVerticalSecciones{
+        height: 150px;
+    }
+}
+
+@media (max-width: 600px){
+    header{
+        height: 100px;
+    }
+
+    #lineaVerticalPrincipal {
+        height: 70px;
+    }
+
+    #firma{
+        height :100px;
+        width: auto;
+    }
+
+    #tituloPrincipal{
+        font-size: 40px;
+    }
+
+    section {
+        left:15px;
+        top:30px;
+    }
+
+    section img{
+        height: 300px;
+        width: auto;
+    }
 }
 
 @font-face {
@@ -40,4 +180,4 @@ header{
     src: url(fuentes/Bafora\ Regular\ Demo.ttf);
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Hubballi&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Hubballi&family=Mukta:wght@200&display=swap');
