--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body{
 
 header{
     position: fixed;
-    background-color: white;
+    background-color: rgb(255, 255, 255);
     height: 120px;
     width: 100%;  
     z-index: 1;
@@ -87,6 +87,7 @@ aside h1{
     font-family: 'Bafora';
     font-size: 55px;
     margin-bottom: 0px;
+    text-shadow: 2px 2px 30px black;
 }
 
 aside p{
@@ -146,7 +147,8 @@ aside p{
     }
 }
 
-@media (max-width: 600px){
+@media (max-width:600px){
+
     header{
         height: 100px;
     }
@@ -164,16 +166,44 @@ aside p{
         font-size: 40px;
     }
 
-    section {
-        left:15px;
-        top:30px;
+    main{
+        position:relative;
+        top:130px;
+    }
+
+    section{
+        width:300px;
+        display:grid;
+        justify-items: center;
+        left:0px;
+    }
+
+    aside {
+        position:relative;
+        width: 300px;
+        text-align: center;
+        margin-top:0px;
+        padding-top:0px;
+        bottom:25px;
     }
 
     section img{
-        height: 300px;
+        height: 400px;
         width: auto;
+        margin-bottom: 0px;
+    }
+
+    .lineaVerticalSecciones {
+        display:none;
     }
 }
+
+@media (max-width:600px) and (orientation: landscape){
+    header{
+        position: relative;
+    }
+}
+
 
 @font-face {
     font-family: 'Bafora';
