--- a/style.css
+++ b/style.css
@@ -197,6 +197,18 @@ a{
 
 /*/////////////////////////////////////////////////////////////RESPONSIVE DESIGN//////////////////////////////////////////////////////*/
 
+@media(max-width:2000px){
+    main{
+        left:165px;
+    }
+}
+
+@media (max-width:1600px) {
+    main{
+        left:5px;
+    }
+}
+
 @media (max-width: 1200px){
 
     section {
@@ -205,7 +217,7 @@ a{
     }
 
     section img{
-        height: 500px;
+        height: 550px;
         width: auto;
     }
 
@@ -216,6 +228,10 @@ a{
 
 @media (max-width: 1000px){
 
+    main{
+        left:-100px;
+    }
+
     section {
         right:22px;
         top : 0px;
@@ -223,7 +239,7 @@ a{
     }
 
     section img{
-        height: 400px;
+        height: 550px;
         width: auto;
     }
 
@@ -234,6 +250,11 @@ a{
 
 @media (max-width: 830px){
 
+    main{
+        left:0px;
+    }
+
+
     section {
         left:49px;
         height: 600px;
@@ -241,7 +262,7 @@ a{
     }
 
     section img{
-        height: 300px;
+        height: 500px;
         width: auto;
     }
 
