--- a/style.css
+++ b/style.css
@@ -134,7 +134,7 @@ main{
 
 section{
     position: relative;
-    left: 250px;
+    left: 249px;
     height: 700px;
     width: 750px;
     border: 1 solid black;
@@ -159,6 +159,15 @@ section img{
     margin-right: 30px;
 }
 
+.lineaVerticalSeccionesHorizontales{
+    float: left;
+    border-left: 2px solid black;
+    height: 450px;
+    opacity: 0.5;
+    margin-left: 30px;
+    margin-right: 30px;
+}
+
 aside{
     float: left;
     width: 30%;
@@ -174,6 +183,24 @@ aside h1{
 aside p{
     font-family: 'Mukta';
     font-size: 20px;
+}
+
+.seccionHorizontal{
+    position: relative;
+    left: 110px;
+    height: 700px;
+    width: 860px;
+    border: 1 solid black;
+    display: flex;
+    align-items: center;
+    margin-top: -100px;
+}
+
+.seccionHorizontal img{
+    height: 400px;
+    width : auto;
+    float:left;
+    border: 1px solid rgba(0, 0, 0, 0.089);
 }
 
 
@@ -209,23 +236,6 @@ a{
     }
 }
 
-@media (max-width: 1200px){
-
-    section {
-        right:93px;
-        top:10px;
-    }
-
-    section img{
-        height: 550px;
-        width: auto;
-    }
-
-    .lineaVerticalSecciones{
-        height: 350px;
-    }
-}
-
 @media (max-width: 1000px){
 
     main{
@@ -233,9 +243,9 @@ a{
     }
 
     section {
-        right:22px;
-        top : 0px;
-        height: 700px;
+        right:115px;
+        top:-25px;
+        margin-bottom: -55px;
     }
 
     section img{
@@ -243,8 +253,23 @@ a{
         width: auto;
     }
 
+    .seccionHorizontal {
+        width: 770px;
+        margin-top: -180px;
+        margin-left: 35px;
+    }
+
+    .seccionHorizontal img{
+        height: 350px;
+        width: auto;
+    }
+
     .lineaVerticalSecciones{
-        height: 250px;
+        height: 350px;
+    }
+
+    .lineaVerticalSeccionesHorizontales{
+        height: 350px;
     }
 }
 
@@ -258,7 +283,8 @@ a{
     section {
         left:49px;
         height: 600px;
-        top :15px;
+        top :0px;
+        margin-bottom: -10px;
     }
 
     section img{
@@ -266,8 +292,73 @@ a{
         width: auto;
     }
 
+    .seccionHorizontal {
+        width: 820px;
+        margin-top: 50px;
+        margin-left: 0px;
+        display: grid;
+    }
+
+    .seccionHorizontal img{
+        height: 350px;
+        width: auto;
+    }
+
+    .asideSeccionesHorizontales{
+        position:relative;
+        width: 300px;
+        text-align: center;
+        margin-top: -35px;
+        bottom:25px;
+        left:95px;
+    }
+
+    .asideSeccionesHorizontales p{
+        margin-top: 10px;
+    }
+
     .lineaVerticalSecciones{
         height: 150px;
+    }
+
+    .lineaVerticalSeccionesHorizontales{
+        display: none;
+    }
+}
+
+@media (max-width:700px){
+
+main{
+    top:150px;
+}
+
+    section{
+        width:300px;
+        display:grid;
+        justify-items: center;
+        left: 170px;
+        margin-bottom: 170px;
+    }
+
+    aside {
+        position:relative;
+        width: 300px;
+        text-align: center;
+        margin-top:45px;
+        padding-top:0px;
+        bottom:25px;
+    }
+
+    aside p{
+        margin-top: 10px;
+    }
+
+    .lineaVerticalSecciones {
+        display:none;
+    }
+
+    .botonSubir{
+        font-size:40px;
     }
 }
 
@@ -277,7 +368,7 @@ a{
     }
 }
 
-@media (max-width:600px){
+@media (max-width:625px){
 
     nav{
         top:25px;
@@ -330,6 +421,30 @@ a{
         margin-bottom: 70px;
     }
 
+    section img{
+        height: 400px;
+        width: auto;
+        margin-bottom: 0px;
+    }
+
+    .seccionHorizontal {
+        width: 300px;
+        left:20px;
+        display: grid;
+        margin-top: -90px;
+    }
+
+    .asideSeccionesHorizontales{
+        lefT:0px;
+        width: 300px;
+        margin-top: -150px;
+    }
+
+    .seccionHorizontal img{
+        height: 250px;
+        width: auto;
+    }
+
     aside {
         position:relative;
         width: 300px;
@@ -341,12 +456,6 @@ a{
 
     aside p{
         margin-top: 10px;
-    }
-
-    section img{
-        height: 400px;
-        width: auto;
-        margin-bottom: 0px;
     }
 
     .lineaVerticalSecciones {
