--- a/style.css
+++ b/style.css
@@ -135,6 +135,8 @@ main{
 section{
     position: relative;
     left: 249px;
+    height: 30%;
+    width: auto;
     height: 700px;
     width: 750px;
     border: 1 solid black;
@@ -362,7 +364,7 @@ main{
     }
 }
 
-@media (max-width:800px) and (orientation: landscape){
+@media (orientation: landscape) and (max-width:800px){
     header{
         position: relative;
     }
